--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2677,7 +2677,7 @@
           <a
             class="lp-element lp-pom-button"
             id="lp-pom-button-202"
-            href="https://www.seguranca.gg/bianquinha/clkg/https/www.kaspersky.com.br/lp/special-offer-for-gamers?reseller=br_ecinflu-br_acq_ona_influ__all_b2c_twitch_lnk_bia______"
+            href="https://www.kaspersky.com.br/lp/special-offer-for-gamers?reseller=br_ecinflu-br_acq_ona_influ__all_b2c_twitch_lnk_bia______"
             target="_blank"
             ><span class="label"><strong>VÁ PARA O SITE</strong></span></a
           >
