--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2251,7 +2251,7 @@
           <div class="lp-element lp-pom-image" id="lp-pom-image-165">
             <div class="lp-pom-image-container" style="overflow: hidden">
               <a
-                href="https://www.seguranca.gg/bianquinha/clkn/https/www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/"
+                href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/"
                 target="_blank"
                 ><img
                   src="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png"
