--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2319,7 +2319,7 @@
           <div class="lp-element lp-pom-image" id="lp-pom-image-169">
             <div class="lp-pom-image-container" style="overflow: hidden">
               <a
-                href="https://www.seguranca.gg/bianquinha/clkn/https/www.youtube.com/watch?v=OaidR7AFJs0&amp;ab_channel=Adrenaline"
+                href="https://www.youtube.com/watch?v=OaidR7AFJs0&amp;ab_channel=Adrenaline"
                 target="_blank"
                 ><img
                   src="./www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg"
@@ -2380,7 +2380,7 @@
           <div class="lp-element lp-pom-image" id="lp-pom-image-173">
             <div class="lp-pom-image-container" style="overflow: hidden">
               <a
-                href="https://www.seguranca.gg/bianquinha/clkn/https/www.kaspersky.com.br/blog/gamers-6-milhoes-ataques-pesquisa-dicas/18157/"
+                href="https://www.kaspersky.com.br/blog/gamers-6-milhoes-ataques-pesquisa-dicas/18157/"
                 target="_blank"
                 ><img
                   src="./www.seguranca.gg_files/747e9a70-gamers-sofreram-quase-6-milhoes-de-ataques-em-12-meses-1.jpg"
@@ -2441,7 +2441,7 @@
           <div class="lp-element lp-pom-image" id="lp-pom-image-177">
             <div class="lp-pom-image-container" style="overflow: hidden">
               <a
-                href="https://www.seguranca.gg/bianquinha/clkn/https/www.youtube.com/watch?v=sdEBCAaDZJ0"
+                href="https://www.youtube.com/watch?v=sdEBCAaDZJ0"
                 target="_blank"
                 ><img
                   src="./www.seguranca.gg_files/d3fcc9bb-use-a-internet-como-um-ninja-vpn-kaspersky-.jpg"
@@ -2527,7 +2527,7 @@
           <div class="lp-element lp-pom-image" id="lp-pom-image-184">
             <div class="lp-pom-image-container" style="overflow: hidden">
               <a
-                href="https://www.seguranca.gg/bianquinha/clkn/https/www.instagram.com/kasperskybr/"
+                href="https://www.instagram.com/kasperskybr/"
                 target="_blank"
                 ><img
                   src="./www.seguranca.gg_files/eebb1d73-instagram.svg"
@@ -2541,7 +2541,7 @@
           <div class="lp-element lp-pom-image" id="lp-pom-image-185">
             <div class="lp-pom-image-container" style="overflow: hidden">
               <a
-                href="https://www.seguranca.gg/bianquinha/clkn/https/www.youtube.com/user/kasperskylabbrasil"
+                href="https://www.youtube.com/user/kasperskylabbrasil"
                 target="_blank"
                 ><img
                   src="./www.seguranca.gg_files/cfde1ac7-youtube.svg"
@@ -2555,7 +2555,7 @@
           <div class="lp-element lp-pom-image" id="lp-pom-image-186">
             <div class="lp-pom-image-container" style="overflow: hidden">
               <a
-                href="https://www.seguranca.gg/bianquinha/clkn/https/www.linkedin.com/company/kaspersky/"
+                href="https://www.linkedin.com/company/kaspersky/"
                 target="_blank"
                 ><img
                   src="./www.seguranca.gg_files/2c3a141e-vector.svg"
@@ -2569,7 +2569,7 @@
           <div class="lp-element lp-pom-image" id="lp-pom-image-187">
             <div class="lp-pom-image-container" style="overflow: hidden">
               <a
-                href="https://www.seguranca.gg/bianquinha/clkn/https/twitter.com/Kasperskybrasil"
+                href="https://twitter.com/Kasperskybrasil"
                 target="_blank"
                 ><img
                   src="./www.seguranca.gg_files/2689fc13--path-.svg"
@@ -2583,7 +2583,7 @@
           <div class="lp-element lp-pom-image" id="lp-pom-image-188">
             <div class="lp-pom-image-container" style="overflow: hidden">
               <a
-                href="https://www.seguranca.gg/bianquinha/clkn/https/www.facebook.com/KasperskyLabBrasil/"
+                href="https://www.facebook.com/KasperskyLabBrasil/"
                 target="_blank"
                 ><img
                   src="./www.seguranca.gg_files/c0f00867-vector-2.svg"
