--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -33,7 +33,7 @@
         min-width: 1336px;
         height: 2992px;
       }
-      #lp-pom-block-12 {
+      #lp-pom-block-12 {window.ub
         display: block;
         background: rgba(29, 29, 27, 1);
         border-style: none;
