--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2587,12 +2587,10 @@
         </div>
         <div class="lp-element lp-pom-image" id="lp-pom-image-196">
           <div class="lp-pom-image-container" style="overflow: hidden">
-            <img
-              src="https://www.seguranca.gg/bianquinha/"
-              alt=""
-              data-src-mobile-1x="//d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/a6f66c78-ksp-tutorial-cupom-generico-2.gif"
-              srcset=""
-            />
+        <img
+  src="https://d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/a6f66c78-ksp-tutorial-cupom-generico-2.gif"
+  alt="Tutorial como aplicar o cupom"
+/>
           </div>
         </div>
         <div class="lp-element lp-pom-image" id="lp-pom-image-198">
@@ -2666,12 +2664,10 @@
           </div>
           <div class="lp-element lp-pom-image" id="lp-pom-image-206">
             <div class="lp-pom-image-container" style="overflow: hidden">
-              <img
-                src="https://www.seguranca.gg/bianquinha/"
-                alt=""
-                data-src-mobile-1x="//d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/70b93c5d-rectangle-2277.svg"
-                srcset=""
-              />
+           <img
+  src="https://d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/70b93c5d-rectangle-2277.svg"
+  alt="Ícone ou decoração visual"
+/>
             </div>
           </div>
           <div class="lp-element lp-pom-image" id="lp-pom-image-207">
