--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -5,6 +5,10 @@
   class="wf-montserrat-n3-active wf-montserrat-n5-active wf-montserrat-n4-active wf-montserrat-n7-active wf-active"
 >
   <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <!-- Adicione aqui: -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+      
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!--1d0db4cb-5e16-486e-aab0-d58b7b9db74b ae-->
 
