--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -1056,6 +1056,22 @@
           min-width: 320px;
           height: 3822px;
         }
+    #lp-pom-image-207 {
+      position: relative;
+    }
+
+    #lp-pom-image-207 .lp-pom-image-container {
+      overflow: visible !important;
+    }
+
+    #lp-pom-image-207 img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: auto;
+      height: auto;
+    }
+
         #lp-pom-block-12 {
           display: block;
           background: rgba(29, 29, 27, 1);
