--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2099,9 +2099,9 @@
       }
     </style>
 <!-- lp:insertions start head -->
-<link href="./www.seguranca.gg_files/main-ebbfc5e.z.css" media="screen" rel="stylesheet" type="text/css">
+<link href="./www.seguranca.gg_files/main-ebbfc5e.z.css" media="screen" rel="stylesheet" type="text/css"/>
 <meta content="" property="og:title"/>
-<link as="image" href="https://www.seguranca.gg/assets/5ad4b90d-26a8-4490-9a97-4ab4b64ae076/1-1.original.png?1723844240" rel="preload"/>
+<link as="image" href="https://www.seguranca.gg/assets/5ad4b90d-26a8-4490-9a97-4ab4b64ae076/1-1.original.png?1723844240" rel="preload">
 <!-- lp:insertions end head -->
 <script async="" src="./www.seguranca.gg_files/6622902072f544a006592f968a158074f43318d5.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -2154,7 +2154,7 @@
         }
       }
     </style>
-</link></head>
+</link><meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/></head>
 <body class="lp-pom-body">
 <!-- lp:insertions start body:before --><!-- lp:insertions end body:before -->
 <div class="lp-element lp-pom-root" id="lp-pom-root">
@@ -2384,7 +2384,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-196">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="Tutorial como aplicar o cupom" src="https:./www.seguranca.gg_files/a6f66c78-ksp-tutorial-cupom-generico-2.gif"/>
+<img alt="Tutorial como aplicar o cupom" src="https://www.seguranca.gg_files/a6f66c78-ksp-tutorial-cupom-generico-2.gif"/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-198">
@@ -2428,7 +2428,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-206">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="Ícone ou decoração visual" src="https:./www.seguranca.gg_files/70b93c5d-rectangle-2277.svg"/>
+<img alt="Ícone ou decoração visual" src="https://www.seguranca.gg_files/70b93c5d-rectangle-2277.svg"/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-207">
