--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2101,7 +2101,7 @@
 <!-- lp:insertions start head -->
 <link href="./www.seguranca.gg_files/main-ebbfc5e.z.css" media="screen" rel="stylesheet" type="text/css"/>
 <meta content="" property="og:title"/>
-<link as="image" href="https://www.seguranca.gg/assets/5ad4b90d-26a8-4490-9a97-4ab4b64ae076/1-1.original.png?1723844240" rel="preload">
+<link as="image" href="https://www.seguranca.gg/assets/5ad4b90d-26a8-4490-9a97-4ab4b64ae076/1-1.original.png?1723844240" rel="preload"/>
 <!-- lp:insertions end head -->
 <script async="" src="./www.seguranca.gg_files/6622902072f544a006592f968a158074f43318d5.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -2143,7 +2143,7 @@
 
       gtag("config", "G-VG0898RLG1");
     </script>
-<link href="https://res.cloudinary.com/dtuazdesl/image/upload/v1729890201/favicon_sw4oue.ico" rel="icon" type="image/x-icon"/>
+<link href="https://res.cloudinary.com/dtuazdesl/image/upload/v1729890201/favicon_sw4oue.ico" rel="icon" type="image/x-icon">
 <link href="./www.seguranca.gg_files/css" media="all" rel="stylesheet"/>
 <link href="blob:https://www.seguranca.gg/cf6db410-ee67-4691-91a0-8e5303f23287" rel="stylesheet" type="text/css"/>
 <style type="text/css">
@@ -2167,7 +2167,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-163">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+
 </div>
 </div>
 <div class="lp-element lp-pom-box" id="lp-pom-box-164">
@@ -2215,7 +2215,7 @@
 <div id="lp-pom-box-168-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-169">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.youtube.com/watch?v=OaidR7AFJs0&amp;ab_channel=Adrenaline" target="_blank"><img alt="" data-src-desktop-1x="./www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg" data-src-mobile-1x="./www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky_107804o000000000000000.jpg" data-src-mobile-2x="./www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg" src="./www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg" srcset=""/></a>
+<a href="https://www.youtube.com/watch?v=OaidR7AFJs0&amp;ab_channel=Adrenaline" target="_blank"><img alt="" data-src-desktop-1x="https://d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/0829d24a_adrenaline_testando_de_verdade_o_modo_gamer_da_kaspersky.jpg" data-src-mobile-1x="https://d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/0829d24a_adrenaline_testando_de_verdade_o_modo_gamer_da_kaspersky.jpg" data-src-mobile-2x="https://d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/0829d24a_adrenaline_testando_de_verdade_o_modo_gamer_da_kaspersky.jpg" src="https://d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/0829d24a_adrenaline_testando_de_verdade_o_modo_gamer_da_kaspersky.jpg" srcset=""/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-170" style="height: auto">
@@ -2365,7 +2365,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-193">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-194">
@@ -2389,12 +2389,12 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-198">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-199">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+
 </div>
 </div>
 <div class="lp-element lp-pom-box" id="lp-pom-box-200">
@@ -2500,7 +2500,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-222">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-223" style="height: auto">
@@ -2518,7 +2518,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-224">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+
 </div>
 </div>
 <div class="lp-element lp-pom-video" id="lp-pom-video-225">
