--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2167,18 +2167,14 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-163">
 <div class="lp-pom-image-container" style="overflow: hidden">
-
+<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-box" id="lp-pom-box-164">
 <div id="lp-pom-box-164-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-165">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/" target="_blank"><img alt="" data-src-desktop-1x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" data-src-desktop-2x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10hc0bc0hc0b8000002028.png" data-src-desktop-3x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10q00h00q00gu000003028.png" data-src-mobile-1x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_107804o000000000000028.png" data-src-mobile-2x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10eg09c000000000000028.png" data-src-mobile-3x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10lo0e0000000000000028.png" src="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" srcset="
-                    ./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png 1x,
-                    //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10hc0bc0hc0b8000002028.png 2x,
-                    //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10q00h00q00gu000003028.png 3x
-                  "/></a>
+<a href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/" target="_blank"><img alt="" data-src-desktop-1x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" data-src-desktop-2x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10hc0bc0hc0b8000002028.png" data-src-desktop-3x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10q00h00q00gu000003028.png" data-src-mobile-1x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_107804o000000000000028.png" data-src-mobile-2x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10eg09c000000000000028.png" data-src-mobile-3x="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10lo0e0000000000000028.png" src="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" srcset="./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png 1x"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-166" style="height: auto">
@@ -2215,7 +2211,7 @@
 <div id="lp-pom-box-168-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-169">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.youtube.com/watch?v=OaidR7AFJs0&amp;ab_channel=Adrenaline" target="_blank"><img alt="" data-src-desktop-1x="https://d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/0829d24a_adrenaline_testando_de_verdade_o_modo_gamer_da_kaspersky.jpg" data-src-mobile-1x="https://d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/0829d24a_adrenaline_testando_de_verdade_o_modo_gamer_da_kaspersky.jpg" data-src-mobile-2x="https://d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/0829d24a_adrenaline_testando_de_verdade_o_modo_gamer_da_kaspersky.jpg" src="https://d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/0829d24a_adrenaline_testando_de_verdade_o_modo_gamer_da_kaspersky.jpg" srcset=""/></a>
+<a href="https://www.youtube.com/watch?v=OaidR7AFJs0&amp;ab_channel=Adrenaline" target="_blank"><img alt="" data-src-desktop-1x="./www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg" data-src-mobile-1x="./www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky_107804o000000000000000.jpg" data-src-mobile-2x="./www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg" src="./www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg" srcset=""/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-170" style="height: auto">
@@ -2365,7 +2361,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-193">
 <div class="lp-pom-image-container" style="overflow: hidden">
-
+<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-194">
@@ -2389,12 +2385,12 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-198">
 <div class="lp-pom-image-container" style="overflow: hidden">
-
+<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-199">
 <div class="lp-pom-image-container" style="overflow: hidden">
-
+<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-box" id="lp-pom-box-200">
@@ -2433,11 +2429,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-207">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" data-src-desktop-1x="./www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" data-src-desktop-2x="./www.seguranca.gg_files/2d830f60-1-1_10dy0ai0dy09q00000e028.png" data-src-desktop-3x="./www.seguranca.gg_files/2d830f60-1-1_10kx0fr0kx0el00000l028.png" data-src-mobile-1x="./www.seguranca.gg_files/2d830f60-1-1_103f02d036026009007028.png" data-src-mobile-2x="./www.seguranca.gg_files/2d830f60-1-1_106u04q06c04c00i00e028.png" data-src-mobile-3x="./www.seguranca.gg_files/2d830f60-1-1_10a907309i06i00r00l028.png" src="./www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" srcset="
-                  ./www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png 1x,
-                  //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/2d830f60-1-1_10dy0ai0dy09q00000e028.png 2x,
-                  //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/2d830f60-1-1_10kx0fr0kx0el00000l028.png 3x
-                "/>
+<img alt="" data-src-desktop-1x="./www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" data-src-desktop-2x="./www.seguranca.gg_files/2d830f60-1-1_10dy0ai0dy09q00000e028.png" data-src-desktop-3x="./www.seguranca.gg_files/2d830f60-1-1_10kx0fr0kx0el00000l028.png" data-src-mobile-1x="./www.seguranca.gg_files/2d830f60-1-1_103f02d036026009007028.png" data-src-mobile-2x="./www.seguranca.gg_files/2d830f60-1-1_106u04q06c04c00i00e028.png" data-src-mobile-3x="./www.seguranca.gg_files/2d830f60-1-1_10a907309i06i00r00l028.png" src="./www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" srcset="./www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png 1x"/>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-208" style="height: auto">
@@ -2500,7 +2492,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-222">
 <div class="lp-pom-image-container" style="overflow: hidden">
-
+<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-223" style="height: auto">
@@ -2518,7 +2510,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-224">
 <div class="lp-pom-image-container" style="overflow: hidden">
-
+<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-video" id="lp-pom-video-225">
