--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2168,7 +2168,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-163">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-box" id="lp-pom-box-164">
@@ -2366,7 +2366,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-193">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-194">
@@ -2390,12 +2390,12 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-198">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-199">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-box" id="lp-pom-box-200">
@@ -2501,7 +2501,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-222">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-223" style="height: auto">
@@ -2519,7 +2519,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-224">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://www.seguranca.gg/bianquinha/" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-video" id="lp-pom-video-225">
