--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -3,7 +3,7 @@
 <!-- saved from url=(0036)https://www.seguranca.gg/bianquinha/ -->
 <html class="wf-montserrat-n3-active wf-montserrat-n5-active wf-montserrat-n4-active wf-montserrat-n7-active wf-active" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <base href="./">
+<base href="./"/>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <!-- Adicione aqui: -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&amp;display=swap" rel="stylesheet"/>
@@ -2102,7 +2102,7 @@
 <!-- lp:insertions start head -->
 <link href="www.seguranca.gg_files/main-ebbfc5e.z.css" media="screen" rel="stylesheet" type="text/css"/>
 <meta content="" property="og:title"/>
-<link as="image" href="https://www.seguranca.gg/assets/5ad4b90d-26a8-4490-9a97-4ab4b64ae076/1-1.original.png?1723844240" rel="preload">
+<link as="image" href="https://www.seguranca.gg/assets/5ad4b90d-26a8-4490-9a97-4ab4b64ae076/1-1.original.png?1723844240" rel="preload"/>
 <!-- lp:insertions end head -->
 <script async="" src="www.seguranca.gg_files/6622902072f544a006592f968a158074f43318d5.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -2144,7 +2144,7 @@
 
       gtag("config", "G-VG0898RLG1");
     </script>
-<link href="https://res.cloudinary.com/dtuazdesl/image/upload/v1729890201/favicon_sw4oue.ico" rel="icon" type="image/x-icon"/>
+<link href="https://res.cloudinary.com/dtuazdesl/image/upload/v1729890201/favicon_sw4oue.ico" rel="icon" type="image/x-icon">
 <link href="www.seguranca.gg_files/css" media="all" rel="stylesheet"/>
 <link href="blob:https://www.seguranca.gg/cf6db410-ee67-4691-91a0-8e5303f23287" rel="stylesheet" type="text/css"/>
 <style type="text/css">
@@ -2175,11 +2175,7 @@
 <div id="lp-pom-box-164-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-165">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/" target="_blank"><img alt="" data-src-desktop-1x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" data-src-desktop-2x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10hc0bc0hc0b8000002028.png" data-src-desktop-3x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10q00h00q00gu000003028.png" data-src-mobile-1x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_107804o000000000000028.png" data-src-mobile-2x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10eg09c000000000000028.png" data-src-mobile-3x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10lo0e0000000000000028.png" src="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" srcset="
-                    ./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png 1x,
-                    //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10hc0bc0hc0b8000002028.png 2x,
-                    //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10q00h00q00gu000003028.png 3x
-                  "/></a>
+<a href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/" target="_blank"><img alt="" data-src-desktop-1x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" data-src-desktop-2x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10hc0bc0hc0b8000002028.png" data-src-desktop-3x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10q00h00q00gu000003028.png" data-src-mobile-1x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_107804o000000000000028.png" data-src-mobile-2x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10eg09c000000000000028.png" data-src-mobile-3x="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10lo0e0000000000000028.png" src="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-166" style="height: auto">
@@ -2434,11 +2430,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-207">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" data-src-desktop-1x="www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" data-src-desktop-2x="www.seguranca.gg_files/2d830f60-1-1_10dy0ai0dy09q00000e028.png" data-src-desktop-3x="www.seguranca.gg_files/2d830f60-1-1_10kx0fr0kx0el00000l028.png" data-src-mobile-1x="www.seguranca.gg_files/2d830f60-1-1_103f02d036026009007028.png" data-src-mobile-2x="www.seguranca.gg_files/2d830f60-1-1_106u04q06c04c00i00e028.png" data-src-mobile-3x="www.seguranca.gg_files/2d830f60-1-1_10a907309i06i00r00l028.png" src="www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" srcset="
-                  ./www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png 1x,
-                  //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/2d830f60-1-1_10dy0ai0dy09q00000e028.png 2x,
-                  //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/2d830f60-1-1_10kx0fr0kx0el00000l028.png 3x
-                "/>
+<img alt="" data-src-desktop-1x="www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" data-src-desktop-2x="www.seguranca.gg_files/2d830f60-1-1_10dy0ai0dy09q00000e028.png" data-src-desktop-3x="www.seguranca.gg_files/2d830f60-1-1_10kx0fr0kx0el00000l028.png" data-src-mobile-1x="www.seguranca.gg_files/2d830f60-1-1_103f02d036026009007028.png" data-src-mobile-2x="www.seguranca.gg_files/2d830f60-1-1_106u04q06c04c00i00e028.png" data-src-mobile-3x="www.seguranca.gg_files/2d830f60-1-1_10a907309i06i00r00l028.png" src="www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png"/>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-208" style="height: auto">
