--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2175,11 +2175,7 @@
 <div id="lp-pom-box-164-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-165">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" data-src-desktop-2x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10hc0bc0hc0b8000002028.png" data-src-desktop-3x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10q00h00q00gu000003028.png" data-src-mobile-1x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_107804o000000000000028.png" data-src-mobile-2x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10eg09c000000000000028.png" data-src-mobile-3x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10lo0e0000000000000028.png" src="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" srcset="
-                    ./www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png 1x, 
-                    //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10hc0bc0hc0b8000002028.png 2x, 
-                    //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10q00h00q00gu000003028.png 3x
-                  "/></a>
+<a href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" data-src-desktop-2x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10hc0bc0hc0b8000002028.png" data-src-desktop-3x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10q00h00q00gu000003028.png" data-src-mobile-1x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_107804o000000000000028.png" data-src-mobile-2x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10eg09c000000000000028.png" data-src-mobile-3x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10lo0e0000000000000028.png" src="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" srcset=""/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-166" style="height: auto">
@@ -2434,11 +2430,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-207">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" data-src-desktop-1x="/www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" data-src-desktop-2x="/www.seguranca.gg_files/2d830f60-1-1_10dy0ai0dy09q00000e028.png" data-src-desktop-3x="/www.seguranca.gg_files/2d830f60-1-1_10kx0fr0kx0el00000l028.png" data-src-mobile-1x="/www.seguranca.gg_files/2d830f60-1-1_103f02d036026009007028.png" data-src-mobile-2x="/www.seguranca.gg_files/2d830f60-1-1_106u04q06c04c00i00e028.png" data-src-mobile-3x="/www.seguranca.gg_files/2d830f60-1-1_10a907309i06i00r00l028.png" src="/www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" srcset="
-                  ./www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png 1x, 
-                  //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/2d830f60-1-1_10dy0ai0dy09q00000e028.png 2x, 
-                  //d9hhrg4mnvzow.cloudfront.net/www.seguranca.gg/bianquinha/2d830f60-1-1_10kx0fr0kx0el00000l028.png 3x
-                "/>
+<img alt="" data-src-desktop-1x="/www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" data-src-desktop-2x="/www.seguranca.gg_files/2d830f60-1-1_10dy0ai0dy09q00000e028.png" data-src-desktop-3x="/www.seguranca.gg_files/2d830f60-1-1_10kx0fr0kx0el00000l028.png" data-src-mobile-1x="/www.seguranca.gg_files/2d830f60-1-1_103f02d036026009007028.png" data-src-mobile-2x="/www.seguranca.gg_files/2d830f60-1-1_106u04q06c04c00i00e028.png" data-src-mobile-3x="/www.seguranca.gg_files/2d830f60-1-1_10a907309i06i00r00l028.png" src="/www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" srcset=""/>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-208" style="height: auto">
