--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2163,19 +2163,19 @@
 <div class="lp-positioned-content">
 <div class="lp-element lp-pom-image" id="lp-pom-image-18">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" data-src-desktop-1x="/www.seguranca.gg_files/j728j4-vector_1000000000000000000028.png" data-src-mobile-1x="/www.seguranca.gg_files/j728j4-vector_102v00k000000000000028.png" data-src-mobile-2x="/www.seguranca.gg_files/j728j4-vector_1000000000000000000028.png" src="/www.seguranca.gg_files/j728j4-vector_1000000000000000000028.png" srcset=""/>
+<img alt="" src="www.seguranca.gg_files/j728j4-vector_1000000000000000000028.png"/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-163">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando"/>
 </div>
 </div>
 <div class="lp-element lp-pom-box" id="lp-pom-box-164">
 <div id="lp-pom-box-164-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-165">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" data-src-desktop-2x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10hc0bc0hc0b8000002028.png" data-src-desktop-3x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10q00h00q00gu000003028.png" data-src-mobile-1x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_107804o000000000000028.png" data-src-mobile-2x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10eg09c000000000000028.png" data-src-mobile-3x="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_10lo0e0000000000000028.png" src="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png" srcset=""/></a>
+<a href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/" target="_blank"><img alt="" src="www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-166" style="height: auto">
@@ -2212,7 +2212,7 @@
 <div id="lp-pom-box-168-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-169">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.youtube.com/watch?v=OaidR7AFJs0&amp;ab_channel=Adrenaline" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg" data-src-mobile-1x="/www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky_107804o000000000000000.jpg" data-src-mobile-2x="/www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg" src="/www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg" srcset=""/></a>
+<a href="https://www.youtube.com/watch?v=OaidR7AFJs0&amp;ab_channel=Adrenaline" target="_blank"><img alt="" src="www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-170" style="height: auto">
@@ -2249,7 +2249,7 @@
 <div id="lp-pom-box-172-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-173">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.kaspersky.com.br/blog/gamers-6-milhoes-ataques-pesquisa-dicas/18157/" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/747e9a70-gamers-sofreram-quase-6-milhoes-de-ataques-em-12-meses-1.jpg" data-src-mobile-1x="/www.seguranca.gg_files/747e9a70-gamers-sofreram-quase-6-milhoes-de-ataques-em-12-meses-1_107804o000000000000000.jpg" data-src-mobile-2x="/www.seguranca.gg_files/747e9a70-gamers-sofreram-quase-6-milhoes-de-ataques-em-12-meses-1.jpg" src="/www.seguranca.gg_files/747e9a70-gamers-sofreram-quase-6-milhoes-de-ataques-em-12-meses-1.jpg" srcset=""/></a>
+<a href="https://www.kaspersky.com.br/blog/gamers-6-milhoes-ataques-pesquisa-dicas/18157/" target="_blank"><img alt="" src="www.seguranca.gg_files/747e9a70-gamers-sofreram-quase-6-milhoes-de-ataques-em-12-meses-1.jpg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-174" style="height: auto">
@@ -2286,7 +2286,7 @@
 <div id="lp-pom-box-176-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-177">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.youtube.com/watch?v=sdEBCAaDZJ0" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/d3fcc9bb-use-a-internet-como-um-ninja-vpn-kaspersky-.jpg" data-src-mobile-1x="/www.seguranca.gg_files/d3fcc9bb-use-a-internet-como-um-ninja-vpn-kaspersky-_107804o000000000000000.jpg" data-src-mobile-2x="/www.seguranca.gg_files/d3fcc9bb-use-a-internet-como-um-ninja-vpn-kaspersky-.jpg" src="/www.seguranca.gg_files/d3fcc9bb-use-a-internet-como-um-ninja-vpn-kaspersky-.jpg" srcset=""/></a>
+<a href="https://www.youtube.com/watch?v=sdEBCAaDZJ0" target="_blank"><img alt="" src="www.seguranca.gg_files/d3fcc9bb-use-a-internet-como-um-ninja-vpn-kaspersky-.jpg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-178" style="height: auto">
@@ -2331,43 +2331,43 @@
 <div id="lp-pom-box-183-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-184">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.instagram.com/kasperskybr/" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/eebb1d73-instagram.svg" data-src-mobile-1x="/www.seguranca.gg_files/eebb1d73-instagram.svg" src="/www.seguranca.gg_files/eebb1d73-instagram.svg" srcset=""/></a>
+<a href="https://www.instagram.com/kasperskybr/" target="_blank"><img alt="" src="www.seguranca.gg_files/eebb1d73-instagram.svg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-185">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.youtube.com/user/kasperskylabbrasil" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/cfde1ac7-youtube.svg" data-src-mobile-1x="/www.seguranca.gg_files/cfde1ac7-youtube.svg" src="/www.seguranca.gg_files/cfde1ac7-youtube.svg" srcset=""/></a>
+<a href="https://www.youtube.com/user/kasperskylabbrasil" target="_blank"><img alt="" src="www.seguranca.gg_files/cfde1ac7-youtube.svg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-186">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.linkedin.com/company/kaspersky/" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/2c3a141e-vector.svg" data-src-mobile-1x="/www.seguranca.gg_files/2c3a141e-vector.svg" src="/www.seguranca.gg_files/2c3a141e-vector.svg" srcset=""/></a>
+<a href="https://www.linkedin.com/company/kaspersky/" target="_blank"><img alt="" src="www.seguranca.gg_files/2c3a141e-vector.svg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-187">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://twitter.com/Kasperskybrasil" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/2689fc13--path-.svg" data-src-mobile-1x="/www.seguranca.gg_files/2689fc13--path-.svg" src="/www.seguranca.gg_files/2689fc13--path-.svg" srcset=""/></a>
+<a href="https://twitter.com/Kasperskybrasil" target="_blank"><img alt="" src="www.seguranca.gg_files/2689fc13--path-.svg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-188">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.facebook.com/KasperskyLabBrasil/" target="_blank"><img alt="" data-src-desktop-1x="/www.seguranca.gg_files/c0f00867-vector-2.svg" data-src-mobile-1x="/www.seguranca.gg_files/c0f00867-vector-2.svg" src="/www.seguranca.gg_files/c0f00867-vector-2.svg" srcset=""/></a>
+<a href="https://www.facebook.com/KasperskyLabBrasil/" target="_blank"><img alt="" src="www.seguranca.gg_files/c0f00867-vector-2.svg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-189">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" data-src-desktop-1x="/www.seguranca.gg_files/j728j4-vector_1000000000000000000028.png" data-src-mobile-1x="/www.seguranca.gg_files/j728j4-vector_102v00k000000000000028.png" data-src-mobile-2x="/www.seguranca.gg_files/j728j4-vector_1000000000000000000028.png" src="/www.seguranca.gg_files/j728j4-vector_1000000000000000000028.png" srcset=""/>
+<img alt="" src="www.seguranca.gg_files/j728j4-vector_1000000000000000000028.png"/>
 </div>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-193">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando"/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-194">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" data-src-desktop-1x="/www.seguranca.gg_files/9d8c515b-ksp-tutorial-cupom-generico.gif" src="/www.seguranca.gg_files/9d8c515b-ksp-tutorial-cupom-generico.gif" srcset=""/>
+<img alt="" src="www.seguranca.gg_files/9d8c515b-ksp-tutorial-cupom-generico.gif"/>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-195" style="height: auto">
@@ -2386,19 +2386,19 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-198">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando"/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-199">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando"/>
 </div>
 </div>
 <div class="lp-element lp-pom-box" id="lp-pom-box-200">
 <div id="lp-pom-box-200-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-201">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" data-src-desktop-1x="/www.seguranca.gg_files/1gvmymc-rectangle-2277_1000000000000000000028.png" src="/www.seguranca.gg_files/1gvmymc-rectangle-2277_1000000000000000000028.png" srcset=""/>
+<img alt="" src="www.seguranca.gg_files/1gvmymc-rectangle-2277_1000000000000000000028.png"/>
 </div>
 </div>
 <a class="lp-element lp-pom-button" href="https://www.kaspersky.com.br/lp/special-offer-for-gamers?reseller=br_ecinflu-br_acq_ona_influ__all_b2c_twitch_lnk_bia______" id="lp-pom-button-202" target="_blank"><span class="label"><strong>VÁ PARA O SITE</strong></span></a>
@@ -2430,7 +2430,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-207">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" data-src-desktop-1x="/www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" data-src-desktop-2x="/www.seguranca.gg_files/2d830f60-1-1_10dy0ai0dy09q00000e028.png" data-src-desktop-3x="/www.seguranca.gg_files/2d830f60-1-1_10kx0fr0kx0el00000l028.png" data-src-mobile-1x="/www.seguranca.gg_files/2d830f60-1-1_103f02d036026009007028.png" data-src-mobile-2x="/www.seguranca.gg_files/2d830f60-1-1_106u04q06c04c00i00e028.png" data-src-mobile-3x="/www.seguranca.gg_files/2d830f60-1-1_10a907309i06i00r00l028.png" src="/www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png" srcset=""/>
+<img alt="" src="www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png"/>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-208" style="height: auto">
@@ -2487,13 +2487,13 @@
 <div class="lp-element lp-code" id="lp-code-215">
 <!-- lp:insertions start div#lp-code-215 -->
 <div style="width: 320px; height: 400px; overflow: hidden">
-<img alt="Kaspersky Sorteio Kabum" src="/www.seguranca.gg_files/ksp-sorteio-kabum-50_-stories-OFICIAL-1080x1920_rmtrgs.jpg" style="width: 100%; height: 100%; object-fit: cover"/>
+<img alt="Kaspersky Sorteio Kabum" src="www.seguranca.gg_files/ksp-sorteio-kabum-50_-stories-OFICIAL-1080x1920_rmtrgs.jpg" style="width: 100%; height: 100%; object-fit: cover"/>
 </div>
 <!-- lp:insertions end div#lp-code-215 -->
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-222">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando"/>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-223" style="height: auto">
@@ -2511,7 +2511,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-224">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando" srcset=""/>
+<img alt="" src="https://via.placeholder.com/300x200?text=Imagem+Faltando"/>
 </div>
 </div>
 <div class="lp-element lp-pom-video" id="lp-pom-video-225">
