--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2100,11 +2100,11 @@
       }
     </style>
 <!-- lp:insertions start head -->
-<link href="/www.seguranca.gg_files/main-ebbfc5e.z.css" media="screen" rel="stylesheet" type="text/css"/>
+<link href="/assets/main-ebbfc5e.z.css" media="screen" rel="stylesheet" type="text/css"/>
 <meta content="" property="og:title"/>
 <link as="image" href="/assets/5ad4b90d-26a8-4490-9a97-4ab4b64ae076/1-1.original.png?1723844240" rel="preload"/>
 <!-- lp:insertions end head -->
-<script async="" src="/www.seguranca.gg_files/6622902072f544a006592f968a158074f43318d5.js" type="text/javascript"></script>
+<script async="" src="/assets/6622902072f544a006592f968a158074f43318d5.js" type="text/javascript"></script>
 <script type="text/javascript">
       (function () {
         (function (i, s, o, g, r, a, m) {
@@ -2134,7 +2134,7 @@
       }).call(this);
     </script>
 <!-- Google tag (gtag.js) -->
-<script async="" src="/www.seguranca.gg_files/js" type="text/javascript"></script>
+<script async="" src="/assets/js" type="text/javascript"></script>
 <script type="text/javascript">
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -2144,9 +2144,8 @@
 
       gtag("config", "G-VG0898RLG1");
     </script>
-<link href="https://res.cloudinary.com/dtuazdesl/image/upload/v1729890201/favicon_sw4oue.ico" rel="icon" type="image/x-icon">
-<link href="/www.seguranca.gg_files/css" media="all" rel="stylesheet"/>
-
+<link href="https://res.cloudinary.com/dtuazdesl/image/upload/v1729890201/favicon_sw4oue.ico" rel="icon" type="image/x-icon"/>
+<link href="/assets/css" media="all" rel="stylesheet">
 <style type="text/css">
       @media only screen and (max-width: 480px),
         only screen and (max-device-width: 480px) {
@@ -2163,7 +2162,7 @@
 <div class="lp-positioned-content">
 <div class="lp-element lp-pom-image" id="lp-pom-image-18">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="/www.seguranca.gg_files/j728j4-vector_1000000000000000000028.png"/>
+<img alt="" src="/assets/j728j4-vector_1000000000000000000028.png"/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-163">
@@ -2175,7 +2174,7 @@
 <div id="lp-pom-box-164-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-165">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/" target="_blank"><img alt="" src="/www.seguranca.gg_files/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png"/></a>
+<a href="https://www.kaspersky.com.br/blog/how-to-protect-emv-and-nfc-bank-cards/20934/" target="_blank"><img alt="" src="/assets/e6a45a6f-blog-kaspersky-how-to-protect-emv-and-nfc-bank-cards_108o05o08o05m000001028.png"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-166" style="height: auto">
@@ -2212,7 +2211,7 @@
 <div id="lp-pom-box-168-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-169">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.youtube.com/watch?v=OaidR7AFJs0&amp;ab_channel=Adrenaline" target="_blank"><img alt="" src="/www.seguranca.gg_files/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg"/></a>
+<a href="https://www.youtube.com/watch?v=OaidR7AFJs0&amp;ab_channel=Adrenaline" target="_blank"><img alt="" src="/assets/0829d24a-adrenaline-testando-de-verdade-o-modo-gamer-da-kaspersky.jpg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-170" style="height: auto">
@@ -2249,7 +2248,7 @@
 <div id="lp-pom-box-172-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-173">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.kaspersky.com.br/blog/gamers-6-milhoes-ataques-pesquisa-dicas/18157/" target="_blank"><img alt="" src="/www.seguranca.gg_files/747e9a70-gamers-sofreram-quase-6-milhoes-de-ataques-em-12-meses-1.jpg"/></a>
+<a href="https://www.kaspersky.com.br/blog/gamers-6-milhoes-ataques-pesquisa-dicas/18157/" target="_blank"><img alt="" src="/assets/747e9a70-gamers-sofreram-quase-6-milhoes-de-ataques-em-12-meses-1.jpg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-174" style="height: auto">
@@ -2286,7 +2285,7 @@
 <div id="lp-pom-box-176-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-177">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.youtube.com/watch?v=sdEBCAaDZJ0" target="_blank"><img alt="" src="/www.seguranca.gg_files/d3fcc9bb-use-a-internet-como-um-ninja-vpn-kaspersky-.jpg"/></a>
+<a href="https://www.youtube.com/watch?v=sdEBCAaDZJ0" target="_blank"><img alt="" src="/assets/d3fcc9bb-use-a-internet-como-um-ninja-vpn-kaspersky-.jpg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-178" style="height: auto">
@@ -2331,32 +2330,32 @@
 <div id="lp-pom-box-183-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-184">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.instagram.com/kasperskybr/" target="_blank"><img alt="" src="/www.seguranca.gg_files/eebb1d73-instagram.svg"/></a>
+<a href="https://www.instagram.com/kasperskybr/" target="_blank"><img alt="" src="/assets/eebb1d73-instagram.svg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-185">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.youtube.com/user/kasperskylabbrasil" target="_blank"><img alt="" src="/www.seguranca.gg_files/cfde1ac7-youtube.svg"/></a>
+<a href="https://www.youtube.com/user/kasperskylabbrasil" target="_blank"><img alt="" src="/assets/cfde1ac7-youtube.svg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-186">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.linkedin.com/company/kaspersky/" target="_blank"><img alt="" src="/www.seguranca.gg_files/2c3a141e-vector.svg"/></a>
+<a href="https://www.linkedin.com/company/kaspersky/" target="_blank"><img alt="" src="/assets/2c3a141e-vector.svg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-187">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://twitter.com/Kasperskybrasil" target="_blank"><img alt="" src="/www.seguranca.gg_files/2689fc13--path-.svg"/></a>
+<a href="https://twitter.com/Kasperskybrasil" target="_blank"><img alt="" src="/assets/2689fc13--path-.svg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-188">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<a href="https://www.facebook.com/KasperskyLabBrasil/" target="_blank"><img alt="" src="/www.seguranca.gg_files/c0f00867-vector-2.svg"/></a>
+<a href="https://www.facebook.com/KasperskyLabBrasil/" target="_blank"><img alt="" src="/assets/c0f00867-vector-2.svg"/></a>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-189">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="/www.seguranca.gg_files/j728j4-vector_1000000000000000000028.png"/>
+<img alt="" src="/assets/j728j4-vector_1000000000000000000028.png"/>
 </div>
 </div>
 </div>
@@ -2367,7 +2366,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-194">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="/www.seguranca.gg_files/9d8c515b-ksp-tutorial-cupom-generico.gif"/>
+<img alt="" src="/assets/9d8c515b-ksp-tutorial-cupom-generico.gif"/>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-195" style="height: auto">
@@ -2381,7 +2380,7 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-196">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="Tutorial como aplicar o cupom" src="/www.seguranca.gg_files/a6f66c78-ksp-tutorial-cupom-generico-2.gif"/>
+<img alt="Tutorial como aplicar o cupom" src="/assets/a6f66c78-ksp-tutorial-cupom-generico-2.gif"/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-198">
@@ -2398,7 +2397,7 @@
 <div id="lp-pom-box-200-color-overlay"></div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-201">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="/www.seguranca.gg_files/1gvmymc-rectangle-2277_1000000000000000000028.png"/>
+<img alt="" src="/assets/1gvmymc-rectangle-2277_1000000000000000000028.png"/>
 </div>
 </div>
 <a class="lp-element lp-pom-button" href="https://www.kaspersky.com.br/lp/special-offer-for-gamers?reseller=br_ecinflu-br_acq_ona_influ__all_b2c_twitch_lnk_bia______" id="lp-pom-button-202" target="_blank"><span class="label"><strong>VÁ PARA O SITE</strong></span></a>
@@ -2425,12 +2424,12 @@
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-206">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="Ícone ou decoração visual" src="/www.seguranca.gg_files/70b93c5d-rectangle-2277.svg"/>
+<img alt="Ícone ou decoração visual" src="/assets/70b93c5d-rectangle-2277.svg"/>
 </div>
 </div>
 <div class="lp-element lp-pom-image" id="lp-pom-image-207">
 <div class="lp-pom-image-container" style="overflow: hidden">
-<img alt="" src="/www.seguranca.gg_files/2d830f60-1-1_106z05906z04v000007028.png"/>
+<img alt="" src="/assets/2d830f60-1-1_106z05906z04v000007028.png"/>
 </div>
 </div>
 <div class="lp-element lp-pom-text nlh" id="lp-pom-text-208" style="height: auto">
@@ -2487,7 +2486,7 @@
 <div class="lp-element lp-code" id="lp-code-215">
 <!-- lp:insertions start div#lp-code-215 -->
 <div style="width: 320px; height: 400px; overflow: hidden">
-<img alt="Kaspersky Sorteio Kabum" src="/www.seguranca.gg_files/ksp-sorteio-kabum-50_-stories-OFICIAL-1080x1920_rmtrgs.jpg" style="width: 100%; height: 100%; object-fit: cover"/>
+<img alt="Kaspersky Sorteio Kabum" src="/assets/ksp-sorteio-kabum-50_-stories-OFICIAL-1080x1920_rmtrgs.jpg" style="width: 100%; height: 100%; object-fit: cover"/>
 </div>
 <!-- lp:insertions end div#lp-code-215 -->
 </div>
@@ -2566,7 +2565,7 @@
         els.forEach((el) => obs.observe(el));
       })();
     </script>
-<script async="" src="/www.seguranca.gg_files/main.bundle-f4428e5.z.js" type="text/javascript"></script>
+<script async="" src="/assets/main.bundle-f4428e5.z.js" type="text/javascript"></script>
 <!-- lp:insertions end body:after -->
 <script>
       (function () {
@@ -2603,14 +2602,14 @@
         }
       })();
     </script>
-<iframe height="1" src="/www.seguranca.gg_files/saved_resource.html" style="
+<iframe height="1" src="/assets/saved_resource.html" style="
         position: absolute;
         top: 0px;
         left: 0px;
         border: none;
         visibility: hidden;
       " width="1"></iframe>
-<script crossorigin="anonymous" data-cf-beacon='{"rayId":"955522d52c18ca5d","version":"2025.6.2","r":1,"token":"11217815c4424da582456c25e855cee6","serverTiming":{"name":{"cfExtPri":true,"cfEdge":true,"cfOrigin":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}' defer="" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" src="/www.seguranca.gg_files/vcd15cbe7772f49c399c6a5babf22c1241717689176015"></script>
+<script crossorigin="anonymous" data-cf-beacon='{"rayId":"955522d52c18ca5d","version":"2025.6.2","r":1,"token":"11217815c4424da582456c25e855cee6","serverTiming":{"name":{"cfExtPri":true,"cfEdge":true,"cfOrigin":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}' defer="" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" src="/assets/vcd15cbe7772f49c399c6a5babf22c1241717689176015"></script>
 <div class="backdrop__3tG5Hl"></div>
 </body>
 </html>
