--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2134,16 +2134,14 @@
       }).call(this);
     </script>
 <!-- Google tag (gtag.js) -->
-<script async="" src="/bianquinha/assets/js" type="text/javascript"></script>
-<script type="text/javascript">
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VG0898RLG1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag("config", "G-VG0898RLG1");
-    </script>
+  gtag('config', 'G-VG0898RLG1');
+</script>
 <link href="https://res.cloudinary.com/dtuazdesl/image/upload/v1729890201/favicon_sw4oue.ico" rel="icon" type="image/x-icon"/>
 <link href="/bianquinha/assets/css" media="all" rel="stylesheet">
 <style type="text/css">
