--- a/lp-bianquinha-netlify/index.html
+++ b/lp-bianquinha-netlify/index.html
@@ -2484,7 +2484,7 @@
 <div class="lp-element lp-code" id="lp-code-215">
 <!-- lp:insertions start div#lp-code-215 -->
 <div style="width: 320px; height: 400px; overflow: hidden">
-<img alt="Kaspersky Sorteio Kabum" src="/bianquinha/assets/banner-aniversario-mobile.jpg" style="width: 100%; height: 100%; object-fit: cover"/>
+<img alt="Banner Kaspersky Mobile" src="https://res.cloudinary.com/dtuazdesl/image/upload/v1728937737/ksp-sorteio-kabum-50_-stories-OFICIAL-1080x1920_rmtrgs.jpg" style="max-width: 100%; height: auto;" />
 </div>
 <!-- lp:insertions end div#lp-code-215 -->
 </div>
